<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarContacto2">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/tituloAgregar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="349dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:text="@string/descAgregar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="585dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tituloEstudios"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rbPrimarioIncompleto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PrimarioCompleto" />

                    <RadioButton
                        android:id="@+id/rbPrimarioCompleto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PrimarioCompleto" />

                    <RadioButton
                        android:id="@+id/rbSecundarioIncompleto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SecundarioIncompleto" />

                    <RadioButton
                        android:id="@+id/rbSecundarioCompleto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SecundarioCompleto" />

                    <RadioButton
                        android:id="@+id/rbOtro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Otros" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tituloIntereses"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cbDeporte"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Deporte" />

                        <CheckBox
                            android:id="@+id/cbMusica"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Musica" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cbArte"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Arte" />

                        <CheckBox
                            android:id="@+id/cbTecnologia"
                            android:layout_width="57dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Tecnologia" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/RecibirInfo"
                            android:textSize="20sp" />

                        <Switch
                            android:id="@+id/swInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:text="si" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnGuardar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Guardar" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>